[package]
name = "my-stack"
version = "0.1.0"
edition = "2021"
description = "A simple stack implementation in Rust."
authors = ["katte <xu19880709@gmail.com>"]
license = "MIT"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
