[package]
name = "my-stack"
version = "0.1.1"
edition = "2021"
description = "A simple stack implementation in Rust."
authors = ["katte <xu19880709@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "http://fxlogo.com"
repository = "https://github.com/katteXu/my-stack.git"

[dependencies]
